// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nivoBlueskyFormatter > should output correct shape via input 1`] = `
[
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 1126,
      },
      {
        "x": "2020-07-17",
        "y": 1137,
      },
      {
        "x": "2020-07-18",
        "y": 1150,
      },
    ],
    "id": "followers",
  },
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 880,
      },
      {
        "x": "2020-07-17",
        "y": 882,
      },
      {
        "x": "2020-07-18",
        "y": 890,
      },
    ],
    "id": "posts",
  },
]
`;

exports[`nivoGithubFormatter > should output correct shape via input 1`] = `
[
  {
    "data": [
      {
        "x": "2020-07-17",
        "y": 113,
      },
      {
        "x": "2020-07-18",
        "y": 113,
      },
    ],
    "id": "gatsby-starter-portfolio-bella",
  },
  {
    "data": [
      {
        "x": "2020-07-17",
        "y": 517,
      },
      {
        "x": "2020-07-18",
        "y": 517,
      },
    ],
    "id": "gatsby-starter-minimal-blog",
  },
  {
    "data": [
      {
        "x": "2020-07-17",
        "y": 745,
      },
      {
        "x": "2020-07-18",
        "y": 749,
      },
    ],
    "id": "gatsby-themes",
  },
]
`;

exports[`nivoMastodonFormatter > should output correct shape via input 1`] = `
[
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 1126,
      },
      {
        "x": "2020-07-17",
        "y": 1137,
      },
      {
        "x": "2020-07-18",
        "y": 1150,
      },
    ],
    "id": "followers",
  },
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 880,
      },
      {
        "x": "2020-07-17",
        "y": 882,
      },
      {
        "x": "2020-07-18",
        "y": 890,
      },
    ],
    "id": "toots",
  },
]
`;

exports[`nivoTraktFormatter > should output correct shape via input 1`] = `
[
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 380,
      },
      {
        "x": "2020-07-17",
        "y": 375,
      },
    ],
    "id": "moviesWatched",
  },
]
`;

exports[`nivoTwitterFormatter > should output correct shape via input 1`] = `
[
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 1126,
      },
      {
        "x": "2020-07-17",
        "y": 1137,
      },
      {
        "x": "2020-07-18",
        "y": 1150,
      },
    ],
    "id": "followers",
  },
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 880,
      },
      {
        "x": "2020-07-17",
        "y": 882,
      },
      {
        "x": "2020-07-18",
        "y": 890,
      },
    ],
    "id": "tweets",
  },
]
`;

exports[`normalizeGithub > should flatten and group data by name 1`] = `
{
  "gatsby-starter-minimal-blog": [
    {
      "createdAt": "2020-07-17 14:02:07.078+00",
      "forks": 154,
      "id": 2,
      "stars": 517,
    },
    {
      "createdAt": "2020-07-18 14:02:07.078+00",
      "forks": 153,
      "id": 5,
      "stars": 517,
    },
  ],
  "gatsby-starter-portfolio-bella": [
    {
      "createdAt": "2020-07-17 14:02:07.078+00",
      "forks": 19,
      "id": 3,
      "stars": 113,
    },
    {
      "createdAt": "2020-07-18 14:02:07.078+00",
      "forks": 18,
      "id": 6,
      "stars": 113,
    },
  ],
  "gatsby-themes": [
    {
      "createdAt": "2020-07-17 14:02:07.078+00",
      "forks": 243,
      "id": 1,
      "stars": 745,
    },
    {
      "createdAt": "2020-07-18 14:02:07.078+00",
      "forks": 245,
      "id": 4,
      "stars": 749,
    },
  ],
}
`;
